# IDATT2104-Network-programming

./: .gitignore  README.md
assignment-1/: README.md  main.cpp
assignment-2/: CMakeLists.txt  README.md  main.cpp  workers.h
assignment-3/: README.md
assignment-3/src/: SocketClient.java  SocketServerWithThreads.java  SocketThread.java
assignment-4/: README.md
assignment-4/src/: SSLClient.java  UDPClient.java  UDPServer.java
assignment-5/: README.md
assignment-5/backend/: pom.xml
assignment-5/backend/src/main/java/edu/ntnu/idatt2104/sojohans/backend/: BackendApplication.java
assignment-5/backend/src/main/java/edu/ntnu/idatt2104/sojohans/backend/controller/: DockerController.java
assignment-5/backend/src/main/resources/: application.properties
assignment-5/backend/src/test/java/edu/ntnu/idatt2104/sojohans/backend/: BackendApplicationTests.java
assignment-5/frontend/: index.html  package-lock.json  package.json
assignment-5/frontend/src/assets/: main.css
assignment-5/frontend/src/components/: Compiler.vue
assignment-5/frontend/src/router/: index.ts
assignment-5/frontend/src/utils/: httputils.ts
assignment-6/: README.md  server.js
assignment-6/WebClient/: canvasDrawing.js  index.html  style.css
assignment-four/src/: SSLServer.java  UDPClient.java  UDPServer.java  UDPThread.java
assignment-one/: CMakeLists.txt  main.cpp
assignment-three/src/: HTTPServer.java  SocketClient.java  SocketServer.java  SocketServerUsingThreads.java  SocketThread.java
assignment-two/: workers.cpp
(+2 files in other folders)
